--- a/formApp/app/src/main/res/layout/activity_main.xml
+++ b/formApp/app/src/main/res/layout/activity_main.xml
@@ -11,7 +11,7 @@
     <TextView
         android:layout_width="92dp"
         android:layout_height="28dp"
-        android:text="Title"
+        android:text="Game 2 Buy"
         android:textColor="@color/yellow"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintLeft_toLeftOf="parent"
